<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.petugas.petugas.DetailPetugas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.card.MaterialCardView
                    style="@style/SPPKelompok2.Card.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="20dp">

                        <TextView
                            android:id="@+id/namaKelas"
                            style="@style/SPPKelompok2.Text.Bold.Header2"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/sawidji_astuti"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/jumlahSiswa"
                            style="@style/SPPKelompok2.Text.Semibold.Body1"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/sawidji"
                            app:layout_constraintEnd_toEndOf="@+id/namaKelas"
                            app:layout_constraintStart_toStartOf="@+id/namaKelas"
                            app:layout_constraintTop_toBottomOf="@+id/namaKelas" />

                        <ImageButton
                            android:id="@+id/edit"
                            android:layout_width="24dp"
                            android:layout_height="27dp"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:contentDescription="@string/edit"
                            android:focusable="true"
                            android:src="@drawable/icon_edit"
                            app:layout_constraintBottom_toBottomOf="@+id/jumlahSiswa"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toEndOf="@+id/jumlahSiswa"
                            tools:ignore="TouchTargetSizeCheck" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <FrameLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/background_oval_base"
                    android:backgroundTint="@color/orange"
                    android:elevation="3dp">

                    <TextView
                        style="@style/SPPKelompok2.Text.Semibold.Header3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="SA"
                        android:textAllCaps="true"
                        android:textColor="?colorSurface" />

                </FrameLayout>

            </FrameLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                style="@style/SPPKelompok2.Card.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="@+id/frameLayout"
                app:layout_constraintStart_toStartOf="@+id/frameLayout"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="16dp">

                    <TextView
                        android:id="@+id/textView27"
                        style="@style/SPPKelompok2.Text.Regular.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView9"
                        style="@style/SPPKelompok2.Text.Regular.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/petugas"
                        app:layout_constraintBottom_toBottomOf="@+id/textView27"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView27" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/materialCardView"
                app:layout_constraintStart_toStartOf="@+id/materialCardView"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/SPPKelompok2.Text.Bold.Header4"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/aktivitas"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_marginEnd="30dp"
                    style="@style/SPPKelompok2.Text.Medium.Body3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:text="@string/lihat_semua"
                    android:textColor="@color/text_black40"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:paddingHorizontal="16dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_row_aktivitas" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>