<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.main.petugas.Homepage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header"
                style="@style/SPPKelompok2.Text.Semibold.Header3"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/hai_admin"
                android:textColor="?colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/logout"
                android:focusable="true"
                android:src="@drawable/icon_logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/header" />

            <FrameLayout
                android:id="@+id/dashboard"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_dashboard_admin"
                android:backgroundTint="?colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/logout"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/header">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="20dp">

                    <LinearLayout
                        android:id="@+id/dataKelas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/data_kelas"
                            android:src="@drawable/icon_datakelas" />

                        <TextView
                            style="@style/SPPKelompok2.Text.Medium.Body3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_kelas"
                            android:textColor="?colorSurface" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/histori"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toStartOf="@+id/dataSiswa"
                        app:layout_constraintStart_toEndOf="@+id/dataKelas"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/histori"
                            android:src="@drawable/icon_histori" />

                        <TextView
                            style="@style/SPPKelompok2.Text.Medium.Body3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/histori"
                            android:textColor="?colorSurface" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dataSiswa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/histori"
                            android:src="@drawable/icon_datasiswa" />

                        <TextView
                            style="@style/SPPKelompok2.Text.Medium.Body3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_siswa"
                            android:textColor="?colorSurface" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dataPetugas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dataKelas">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/data_petugas"
                            android:src="@drawable/icon_datapetugas" />

                        <TextView
                            style="@style/SPPKelompok2.Text.Medium.Body3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_petugas"
                            android:textColor="@color/neutral_white" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@+id/dashboard"
                app:layout_constraintStart_toStartOf="@+id/dashboard"
                app:layout_constraintTop_toBottomOf="@+id/dashboard">

                <TextView
                    android:id="@+id/textView13"
                    style="@style/SPPKelompok2.Text.Bold.Header4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="SPP"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sppSemua"
                    style="@style/SPPKelompok2.Text.Medium.Body3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/lihat_semua"
                    android:textColor="@color/text_black40"
                    app:layout_constraintBottom_toBottomOf="@+id/textView13"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView13" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/sppSemua"
                    app:layout_constraintStart_toStartOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/textView13"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_row_spp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <TextView
                    android:id="@+id/textView14"
                    style="@style/SPPKelompok2.Text.Bold.Header4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/aktivitas"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/aktivitas"
                    style="@style/SPPKelompok2.Text.Medium.Body3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/lihat_semua"
                    android:textColor="@color/text_black40"
                    app:layout_constraintBottom_toBottomOf="@+id/textView14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView14" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    android:paddingHorizontal="16dp"
                    android:paddingBottom="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/aktivitas"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView14"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_row_aktivitas" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>